# lightly-train-install

./: .gitignore  .gitmodules  AGENTS.md  INSTALL.md  README.md  pyproject.toml  test-dinov3-vitt16-ltdetr.py  train-dinov3-vitt16-ltdetr.py
