[project]
name = "lightly-train-install"
version = "0.1.0"
description = "lightly train installation and development environment"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "faster-coco-eval>=1.6.5",
    "PyYAML",
    "tensorboard",
    "scipy",
    "calflops",
    "transformers",
    "torchmetrics>=1.8.2",
    "termcolor>=3.3.0",
    "supervision>=0.27.0.post1",
    "lightly-train>=0.14.1",
]
